@@ -1,3 +1,5 @@
+  - Add a site-specific extractor for www.ustv.com.tw
+
 v0.33.0 2020-07-22T06:44:18+0800
   - Improve the extraction of dateline and journalist for opinion.udn.com
   - Start parsing dateline string and refromat them as ISO8601
